[gd_scene load_steps=4 format=3 uid="uid://dayayayayayax"]

[ext_resource type="Script" path="res://scripts/ui/Options.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dfw4ij5rfurac" path="res://themes/Perfect DOS VGA 437 Win.ttf" id="2"]
[ext_resource type="Theme" uid="uid://d31vy5b8bcfsa" path="res://themes/main_theme.tres" id="3"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 24
text = "IMPOSTAZIONI"
horizontal_alignment = 1

[node name="KeyboardHintLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "↑↓ Naviga | ←→ Modifica | INVIO/SPAZIO Attiva | S Salva | ESC Indietro"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionsContainer" type="VBoxContainer" parent="MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VideoSection" type="VBoxContainer" parent="MainContainer/ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="VideoTitle" type="Label" parent="MainContainer/ScrollContainer/OptionsContainer/VideoSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.372549, 0.721569, 0.454902, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 18
text = "VIDEO"

[node name="ThemeContainer" type="HBoxContainer" parent="MainContainer/ScrollContainer/OptionsContainer/VideoSection"]
layout_mode = 2

[node name="ThemeLabel" type="Label" parent="MainContainer/ScrollContainer/OptionsContainer/VideoSection/ThemeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Tema:"

[node name="ThemeOption" type="OptionButton" parent="MainContainer/ScrollContainer/OptionsContainer/VideoSection/ThemeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14

[node name="CRTContainer" type="HBoxContainer" parent="MainContainer/ScrollContainer/OptionsContainer/VideoSection"]
layout_mode = 2

[node name="CRTLabel" type="Label" parent="MainContainer/ScrollContainer/OptionsContainer/VideoSection/CRTContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Effetto CRT:"

[node name="CRTCheckBox" type="CheckBox" parent="MainContainer/ScrollContainer/OptionsContainer/VideoSection/CRTContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Attivo"

[node name="VideoSeparator" type="HSeparator" parent="MainContainer/ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="MainContainer/ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="AudioTitle" type="Label" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.372549, 0.721569, 0.454902, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 18
text = "AUDIO"

[node name="AudioEnabledContainer" type="HBoxContainer" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection"]
layout_mode = 2

[node name="AudioEnabledLabel" type="Label" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection/AudioEnabledContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Audio:"

[node name="AudioEnabledCheckBox" type="CheckBox" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection/AudioEnabledContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Attivo"

[node name="VolumeContainer" type="HBoxContainer" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 50.0

[node name="VolumeValueLabel" type="Label" parent="MainContainer/ScrollContainer/OptionsContainer/AudioSection/VolumeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
text = "50%"

[node name="AudioSeparator" type="HSeparator" parent="MainContainer/ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "[S] Salva"

[node name="ButtonSpacer" type="Control" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "[ESC] Indietro"